chore(primeng) sync with master

--- a/core-web/apps/dotcms-ui/src/app/view/components/dot-persona-selector/dot-persona-selector.component.html
+++ b/core-web/apps/dotcms-ui/src/app/view/components/dot-persona-selector/dot-persona-selector.component.html
@@ -45,6 +45,4 @@
     </dot-searchable-dropdown>
 </div>
 
-<dot-add-persona-dialog
-    (createdPersona)="handleNewPersona($event)"
-    #personaDialog />
+<dot-add-persona-dialog (createdPersona)="handleNewPersona($event)" #personaDialog />
