--- a/core-web/apps/dotcms-ui/src/app/view/components/dot-toolbar/components/dot-login-as/dot-login-as.component.html
+++ b/core-web/apps/dotcms-ui/src/app/view/components/dot-toolbar/components/dot-login-as/dot-login-as.component.html
@@ -27,7 +27,7 @@
                     placeholder="{{ 'loginas.select.loginas.user' | dm }}"
                     formControlName="loginAsUser"
                     labelPropertyName="fullName"
-                    overlayWidth="300px"></dot-searchable-dropdown>
+                    overlayWidth="300px" />
             </div>
             <div *ngIf="needPassword" class="field">
                 <input
