chore(primeng) fix unit tests

--- a/core-web/apps/dotcms-ui/src/app/portlets/dot-edit-page/content/components/dot-edit-page-toolbar/dot-edit-page-toolbar.component.html
+++ b/core-web/apps/dotcms-ui/src/app/portlets/dot-edit-page/content/components/dot-edit-page-toolbar/dot-edit-page-toolbar.component.html
@@ -91,7 +91,5 @@
         role="button">
         <i class="material-icons">science</i>
     </p-tag>
-    <dot-edit-page-workflows-actions
-        (fired)="actionFired.emit($event)"
-        [page]="pageState.page" />
+    <dot-edit-page-workflows-actions (fired)="actionFired.emit($event)" [page]="pageState.page" />
 </ng-template>
