--- a/core-web/apps/dotcms-ui/src/app/view/components/dot-persona-selector-option/dot-persona-selector-option.component.html
+++ b/core-web/apps/dotcms-ui/src/app/view/components/dot-persona-selector-option/dot-persona-selector-option.component.html
@@ -4,11 +4,7 @@
     [image]="persona.photo"
     pBadge
     dotAvatar />
-<p-avatar
-    *ngIf="!persona.personalized"
-    [text]="persona.name"
-    [image]="persona.photo"
-    dotAvatar />
+<p-avatar *ngIf="!persona.personalized" [text]="persona.name" [image]="persona.photo" dotAvatar />
 
 <!-- Inline CSS code added to allow ellipsis on 2nd line, if this is moved to the SCCS file the pre-compiler cries -->
 <span
