--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.scss
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.scss
@@ -71,10 +71,23 @@
     scrollbar-gutter: auto;
 }
 
-:host ::ng-deep .p-sidebar-content {
-    padding: 0;
-    height: 100%;
-    overflow: hidden;
+:host ::ng-deep {
+    .p-sidebar-content {
+        padding: 0;
+        height: 100%;
+        overflow: hidden;
+    }
+
+    .category-field__dialog.p-dialog {
+        min-height: 90%;
+        height: 100%;
+        width: 75vw;
+
+        .p-dialog-content {
+            padding: 0;
+            height: 100%;
+        }
+    }
 }
 
 .category-field__empty-state {
