--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/dot-edit-content-category-field.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/dot-edit-content-category-field.component.html
@@ -1,4 +1,4 @@
-@if (store.selected().length) {
+@if (store.confirmedCategories().length) {
     <dot-category-field-chips
         data-testId="category-chip-list"
         [categories]="store.confirmedCategories()"
