chore(primeng) fix unit tests

--- a/core-web/apps/dotcms-ui/src/app/view/components/dot-toolbar/components/dot-toolbar-user/dot-toolbar-user.component.html
+++ b/core-web/apps/dotcms-ui/src/app/view/components/dot-toolbar/components/dot-toolbar-user/dot-toolbar-user.component.html
@@ -16,9 +16,7 @@
         styleClass="toolbar-user__menu" />
 
     @if (vm.showMyAccount) {
-        <dot-my-account
-            (shutdown)="store.showMyAccount(false)"
-            [visible]="vm.showMyAccount" />
+        <dot-my-account (shutdown)="store.showMyAccount(false)" [visible]="vm.showMyAccount" />
     }
 
     @if (vm.showLoginAs) {
