chore(primeng) fix unit tests

--- a/core-web/apps/dotcms-ui/src/app/view/components/dot-theme-selector-dropdown/dot-theme-selector-dropdown.component.html
+++ b/core-web/apps/dotcms-ui/src/app/view/components/dot-theme-selector-dropdown/dot-theme-selector-dropdown.component.html
@@ -50,6 +50,7 @@
                             ? item.themeThumbnail
                             : '/dA/' + item.themeThumbnail + '/titleImage/500w/50q/thumbnail.png'
                     "
+                    [alt]="item.name"
                     class="dot-theme-item__image" />
 
                 <ng-template #imageFallback>
