--- a/core-web/apps/dotcms-ui/src/app/portlets/shared/dot-content-types-edit/components/fields/content-type-fields-properties-form/field-properties/dot-relationships-property/dot-new-relationships/dot-new-relationships.component.html
+++ b/core-web/apps/dotcms-ui/src/app/portlets/shared/dot-content-types-edit/components/fields/content-type-fields-properties-form/field-properties/dot-relationships-property/dot-new-relationships/dot-new-relationships.component.html
@@ -17,7 +17,7 @@
         [totalRecords]="paginatorService.totalRecords"
         id="contentType"
         labelPropertyName="name"
-        width="100%"></dot-searchable-dropdown>
+        width="100%" />
 </div>
 <div class="field">
     <label for="cardinality">{{ 'contenttypes.field.properties.relationships.label' | dm }}</label>
@@ -25,5 +25,5 @@
         (switch)="cardinalityChanged($event)"
         [value]="cardinality"
         [disabled]="editing"
-        id="cardinality"></dot-cardinality-selector>
+        id="cardinality" />
 </div>
