--- a/core-web/apps/dotcms-ui/src/app/portlets/shared/dot-content-types-edit/components/fields/content-type-fields-properties-form/field-properties/dot-relationships-property/dot-edit-relationship/dot-edit-relationships.component.html
+++ b/core-web/apps/dotcms-ui/src/app/portlets/shared/dot-content-types-edit/components/fields/content-type-fields-properties-form/field-properties/dot-relationships-property/dot-edit-relationship/dot-edit-relationships.component.html
@@ -8,4 +8,4 @@
     [totalRecords]="dotPaginatorService.totalRecords"
     [placeholder]="'contenttypes.field.properties.relationship.existing.placeholder' | dm"
     width="100%"
-    labelPropertyName="label"></dot-searchable-dropdown>
+    labelPropertyName="label" />
