chore(primeng) fix unit tests

--- a/core-web/apps/dotcms-ui/src/app/portlets/shared/dot-content-types-edit/components/fields/content-type-fields-properties-form/field-properties/categories-property/categories-property.component.html
+++ b/core-web/apps/dotcms-ui/src/app/portlets/shared/dot-content-types-edit/components/fields/content-type-fields-properties-form/field-properties/categories-property/categories-property.component.html
@@ -16,7 +16,5 @@
 
     <dot-field-validation-message
         [field]="group.controls[property.name]"
-        [message]="
-            'contenttypes.field.properties.category.error.required' | dm
-        " />
+        [message]="'contenttypes.field.properties.category.error.required' | dm" />
 </div>
