--- a/examples/angular/src/app/pages/pages.component.html
+++ b/examples/angular/src/app/pages/pages.component.html
@@ -1,20 +1,27 @@
-@if (context()?.pageAsset; as pageAsset) {
-    <div class="flex flex-col min-h-screen gap-6 bg-neutral-50">
-        @if(pageAsset.layout.header){
-            <app-header>
-                <app-navigation [items]="context()?.nav.children" />
-            </app-header>
-        }
+@if (context(); as vm) {
 
-        <main class="container flex flex-col gap-8 m-auto">
-            <dotcms-layout
-                [pageAsset]="context()?.pageAsset"
-                [components]="components()"
-                [editor]="editorCofig" />
-        </main>
+    @if (vm.error){
+        <app-not-found [error]="vm.error" />
+    } @else if (vm.page) {
+        <div class="flex flex-col gap-6 min-h-screen bg-neutral-50">
+            @if (vm.page.layout.header){
+                <app-header>
+                    @if (vm.nav?.children) {
+                        <app-navigation [items]="vm.nav?.children || []" />
+                    }
+                </app-header>
+            }
 
-        @if(pageAsset.layout.footer){
-            <app-footer />
-        }
-    </div>
+            <main class="container flex flex-col gap-8 m-auto">
+                <dotcms-layout
+                    [pageAsset]="vm.page"
+                    [components]="components()"
+                    [editor]="editorCofig" />
+            </main>
+
+            @if (vm.page.layout.footer) {
+                <app-footer />
+            }
+        </div>
+    }
 }
