--- a/examples/angular/src/app/pages/pages.component.html
+++ b/examples/angular/src/app/pages/pages.component.html
@@ -2,6 +2,8 @@
 
     @if (vm.error){
         <app-error [error]="vm.error" />
+    } @else if (vm.status === 'loading') {
+        <app-loading />
     } @else if (vm.page) {
         <div class="flex flex-col gap-6 min-h-screen bg-neutral-50">
             @if (vm.page.layout.header){
