--- a/examples/angular/src/app/pages/pages.component.html
+++ b/examples/angular/src/app/pages/pages.component.html
@@ -1,13 +1,8 @@
 @if (context(); as vm) {
-    @if (vm.error){
-        <app-error [error]="vm.error" />
-    } 
-    @if (vm.status === 'loading') {
-        <app-loading />
-    }
-    @if (vm.page) {
+    
+    @if (vm.status !== 'idle') {
         <div class="flex flex-col gap-6 min-h-screen bg-neutral-50">
-            @if (vm.page.layout.header){
+            @if (vm.page?.layout?.header){
                 <app-header>
                     @if (vm.nav?.children) {
                         <app-navigation [items]="vm.nav?.children || []" />
@@ -16,13 +11,21 @@
             }
 
             <main class="container flex flex-col gap-8 m-auto">
-                <dotcms-layout
-                    [pageAsset]="vm.page"
-                    [components]="components()"
-                    [editor]="editorCofig" />
+                @if (vm.error) {
+                    <app-error [error]="vm.error" />
+                } 
+                @if (vm.status === 'loading') {
+                    <app-loading />
+                }
+                @if (vm.status === 'success' && vm.page) {
+                    <dotcms-layout
+                        [pageAsset]="vm.page"
+                        [components]="components()"
+                        [editor]="editorCofig" />
+                }
             </main>
 
-            @if (vm.page.layout.footer) {
+            @if (vm.page?.layout?.footer) {
                 <app-footer />
             }
         </div>
