feedback move vars to signals

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-dialog/dot-category-field-dialog.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-dialog/dot-category-field-dialog.component.html
@@ -1,6 +1,6 @@
 <p-dialog
     (onHide)="closedDialog.emit()"
-    [(visible)]="visible"
+    [visible]="$isVisible()"
     data-testId="dialog"
     [draggable]="false"
     [resizable]="false"
