--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/dot-edit-content-category-field.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/dot-edit-content-category-field.component.html
@@ -19,7 +19,7 @@
 @if ($showCategoriesDialog()) {
     @defer (when $showCategoriesDialog()) {
         <dot-category-field-dialog
-            [visible]="$showCategoriesDialog()"
+            [isVisible]="$showCategoriesDialog()"
             (closedDialog)="closeCategoriesDialog()"
             data-testId="dialog-placeholder" />
     }
