implementation (category field): #29563 Change category selection from PrimeNG sidebar to dialog  (#29770)
### Proposed Changes
* Category selection is displayed in a PrimeNG dialog instead of a
sidebar



### Screenshots

Before 


https://github.com/user-attachments/assets/e0549b6c-4992-4e1a-b5cb-fd4125566930


After 


https://github.com/user-attachments/assets/f992c914-5119-4923-9c78-c803a42daa48

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-dialog/dot-category-field-dialog.component.scss
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-dialog/dot-category-field-dialog.component.scss
@@ -71,10 +71,17 @@
     scrollbar-gutter: auto;
 }
 
-:host ::ng-deep .p-sidebar-content {
-    padding: 0;
-    height: 100%;
-    overflow: hidden;
+:host ::ng-deep {
+    .category-field__dialog.p-dialog {
+        min-height: 90%;
+        height: 100%;
+        width: 75vw;
+
+        .p-dialog-content {
+            padding: 0;
+            height: 100%;
+        }
+    }
 }
 
 .category-field__empty-state {
