--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/dot-edit-content-category-field.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/dot-edit-content-category-field.component.html
@@ -1,26 +1,26 @@
-@if (store.selected().length) {
+@if (store.confirmedCategories().length) {
     <dot-category-field-chips
         data-testId="category-chip-list"
-        [categories]="store.selected()"
-        (remove)="store.removeSelected($event)" />
+        [categories]="store.confirmedCategories()"
+        (remove)="store.removeConfirmedCategories($event)" />
 }
 
 <div class="dot-category-field__select">
     <button
         type="button"
-        (click)="openCategoriesSidebar()"
-        [disabled]="$showCategoriesSidebar()"
+        (click)="openCategoriesDialog()"
+        [disabled]="$showCategoriesDialog()"
         [label]="'edit.content.category-field.show-categories-dialog' | dm"
         class="p-button-sm p-button-text p-button-secondary"
-        data-testId="show-sidebar-btn"
+        data-testId="show-dialog-btn"
         pButton></button>
 </div>
 
-@if ($showCategoriesSidebar()) {
-    @defer (when $showCategoriesSidebar()) {
-        <dot-category-field-sidebar
-            [visible]="$showCategoriesSidebar()"
-            (closedSidebar)="closeCategoriesSidebar()"
-            data-testId="sidebar-placeholder" />
+@if ($showCategoriesDialog()) {
+    @defer (when $showCategoriesDialog()) {
+        <dot-category-field-dialog
+            [isVisible]="$showCategoriesDialog()"
+            (closedDialog)="closeCategoriesDialog()"
+            data-testId="dialog-placeholder" />
     }
 }
