--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-dialog/dot-category-field-dialog.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-dialog/dot-category-field-dialog.component.html
@@ -1,49 +1,33 @@
-<p-sidebar
-    #sidebar
-    (onHide)="closedSidebar.emit()"
-    [(visible)]="visible"
-    [showCloseIcon]="false"
-    data-testId="sidebar"
-    position="right"
-    styleClass="w-9">
-    <ng-template pTemplate="header">
-        <div class="flex flex-row category-field__header">
-            <button
-                type="button"
-                (click)="sidebar.close($event)"
-                class="p-button-rounded p-button-text"
-                data-testId="back-btn"
-                icon="pi pi-angle-left"
-                pButton></button>
-            <div class="category-field__header-title" data-testId="sidebar-title">
-                {{ 'edit.content.category-field.sidebar.header.select-categories' | dm }}
-            </div>
-        </div>
-    </ng-template>
-
+<p-dialog
+    (onHide)="closedDialog.emit()"
+    [(visible)]="$isVisible"
+    data-testId="dialog"
+    [draggable]="false"
+    [resizable]="false"
+    [maximizable]="false"
+    [modal]="true"
+    [header]="'edit.content.category-field.dialog.header.select-categories' | dm"
+    styleClass="category-field__dialog">
     <div class="category-field__content h-full w-full">
         <div class="category-field__left-pane flex flex-column">
             <div class="category-field__search">
                 <dot-category-field-search
                     (changeMode)="store.setMode($event)"
                     (term)="store.search($event)"
-                    @fadeAnimation
                     [isLoading]="store.isSearchLoading()" />
             </div>
             <div class="flex-grow-1 category-field__categories">
                 @if (store.mode() === 'list') {
                     <dot-category-field-category-list
-                        @fadeAnimation
                         (itemChecked)="store.updateSelected($event.selected, $event.item)"
                         (rowClicked)="store.getCategories($event)"
                         [categories]="store.categoryList()"
                         [isLoading]="store.isListLoading()"
                         [isInitialState]="store.isInitSate()"
-                        [selected]="store.selectedCategoriesValues()"
+                        [selected]="store.confirmedCategoriesValues()"
                         [breadcrumbs]="store.breadcrumbMenu()" />
                 } @else {
                     <dot-category-field-search-list
-                        @fadeAnimation
                         (itemChecked)="store.addSelected($event)"
                         (removeItem)="store.removeSelected($event)"
                         [status]="store.searchStatus()"
@@ -68,15 +52,23 @@
                         class="p-button p-button-link"
                         data-testId="clear_all-btn"
                         pButton>
-                        {{ 'edit.content.category-field.sidebar.button.clear-all' | dm }}
+                        {{ 'edit.content.category-field.dialog.button.clear-all' | dm }}
                     </button>
                 </div>
             } @else {
                 <div class="category-field__empty-state" data-testId="category-field__empty-state">
                     <i class="pi pi-check-square"></i>
-                    <p>{{ 'edit.content.category-field.sidebar.empty-state' | dm }}</p>
+                    <p>{{ 'edit.content.category-field.dialog.empty-state' | dm }}</p>
                 </div>
             }
         </div>
     </div>
-</p-sidebar>
+    <ng-template pTemplate="footer">
+        <p-button
+            (click)="closedDialog.emit()"
+            [label]="'Cancel' | dm"
+            styleClass="p-button-outlined"
+            data-testId="dialog-cancel" />
+        <p-button (click)="confirmCategories()" [label]="'Apply' | dm" data-testId="dialog-apply" />
+    </ng-template>
+</p-dialog>
