--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-category-list/dot-category-field-category-list.component.scss
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-category-list/dot-category-field-category-list.component.scss
@@ -58,6 +58,7 @@
 .category-list__item-wrapper {
     padding-left: $spacing-3;
     padding-right: $spacing-1;
+    overflow: hidden;
 }
 
 .category-list__item-checkbox {
