--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-category-list/dot-category-field-category-list.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-category-list/dot-category-field-category-list.component.html
@@ -27,10 +27,10 @@
                             class="flex w-full h-full align-items-stretch align-content-center category-list__item-wrapper"
                             (click)="rowClicked.emit({ index, item })"
                             [class.cursor-pointer]="item.hasChildren">
-                            <div class="flex w-full align-content-center align-items-center">
+                            <div class="flex w-full gap-1 align-content-center align-items-center">
                                 <label
                                     data-testId="category-item-label"
-                                    class="flex flex-grow-1 category-list__item-label"
+                                    class="category-list__item-label"
                                     [class.cursor-pointer]="item.hasChildren"
                                     [for]="item.key">
                                     {{ item.value }}
