chore(template-builder): use new angular syntax

--- a/core-web/libs/template-builder/src/lib/components/template-builder/components/add-style-classes-dialog/add-style-classes-dialog.component.html
+++ b/core-web/libs/template-builder/src/lib/components/template-builder/components/add-style-classes-dialog/add-style-classes-dialog.component.html
@@ -13,16 +13,14 @@
         data-testId="autocomplete"
         inputId="auto-complete-input"
         appendTo="body" />
-    <ng-container *ngIf="isJsonClasses$ | async; else suggestionNotes">
+    @if (isJsonClasses$ | async) {
         <ul data-testId="list">
             <li>
                 <i class="pi pi-info-circle"></i>
                 {{ 'dot.template.builder.autocomplete.has.suggestions' | dm }}
             </li>
         </ul>
-    </ng-container>
-
-    <ng-template #suggestionNotes>
+    } @else {
         <ul data-testId="list">
             <li>
                 <i class="pi pi-info-circle"></i>
@@ -34,7 +32,7 @@
                     [innerHTML]="'dot.template.builder.autocomplete.setup.suggestions' | dm"></span>
             </li>
         </ul>
-    </ng-template>
+    }
 </div>
 <div class="dialog__actions-container">
     <p-button (onClick)="save()" data-testId="update-btn">
