--- a/core-web/libs/template-builder/src/lib/components/template-builder/components/template-builder-theme-selector/template-builder-theme-selector.component.html
+++ b/core-web/libs/template-builder/src/lib/components/template-builder/components/template-builder-theme-selector/template-builder-theme-selector.component.html
@@ -40,27 +40,29 @@
                         [ngClass]="{ 'theme__item--active': theme.inode === currentTheme?.inode }"
                         class="theme__item"
                         data-testId="theme-item">
-                        <svg
-                            *ngIf="!theme?.themeThumbnail"
-                            width="130"
-                            height="130"
-                            viewBox="0 0 130 130"
-                            fill="none"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M130 121.56V7.5045C130 -0.439943 129.445 0.00450051 121.514 0.00450051H6.19998C-1.73165 0.00450051 0.209671 0.00450039 0.209671 7.5045V121.56C0.209671 129.505 -1.73165 130.005 6.19998 130.005H121.514C129.445 130.005 130 129.505 130 121.56ZM39.8678 75.8378L57.8943 97.5767L83.1313 65.0045L115.579 108.338H14.6308L39.8678 75.8378Z"
-                                transform="translate(0.789978 0.995499)" />
-                        </svg>
-                        <img
-                            *ngIf="theme?.themeThumbnail"
-                            [src]="
-                                theme.identifier === 'SYSTEM_THEME'
-                                    ? theme.themeThumbnail
-                                    : '/dA/' + theme.themeThumbnail + '/130w/130h/thumbnail.png'
-                            "
-                            class="item__image"
-                            alt="theme image"
-                            data-testId="themeImage" />
+                        @if (!theme?.themeThumbnail) {
+                            <svg
+                                width="130"
+                                height="130"
+                                viewBox="0 0 130 130"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M130 121.56V7.5045C130 -0.439943 129.445 0.00450051 121.514 0.00450051H6.19998C-1.73165 0.00450051 0.209671 0.00450039 0.209671 7.5045V121.56C0.209671 129.505 -1.73165 130.005 6.19998 130.005H121.514C129.445 130.005 130 129.505 130 121.56ZM39.8678 75.8378L57.8943 97.5767L83.1313 65.0045L115.579 108.338H14.6308L39.8678 75.8378Z"
+                                    transform="translate(0.789978 0.995499)" />
+                            </svg>
+                        }
+                        @if (theme?.themeThumbnail) {
+                            <img
+                                [src]="
+                                    theme.identifier === 'SYSTEM_THEME'
+                                        ? theme.themeThumbnail
+                                        : '/dA/' + theme.themeThumbnail + '/130w/130h/thumbnail.png'
+                                "
+                                class="item__image"
+                                alt="theme image"
+                                data-testId="themeImage" />
+                        }
                         <h5 class="item__title">{{ theme.name }}</h5>
                     </div>
                 }
