--- a/core-web/libs/ui/src/lib/components/dot-action-menu-button/dot-action-menu-button.component.html
+++ b/core-web/libs/ui/src/lib/components/dot-action-menu-button/dot-action-menu-button.component.html
@@ -1,11 +1,12 @@
-@if (actions.length > 1 && filteredActions.length) {
-    <dot-menu [icon]="icon" [model]="filteredActions"></dot-menu>
-}
-@if (actions.length === 1 && filteredActions.length === 1) {
+<p>{{ $actions().length }}</p>
+@if ($filteredActions().length === 1) {
     <p-button
-        (click)="filteredActions[0].command($event)"
-        [icon]="filteredActions[0].icon"
-        [pTooltip]="filteredActions[0].label"
+        (click)="$filteredActions()[0].command($event)"
+        [icon]="$filteredActions()[0].icon"
+        [pTooltip]="$filteredActions()[0].label"
         styleClass="p-button-sm p-button-rounded p-button-text"
-        data-testid="dot-action-tooltip-button"></p-button>
+        data-testid="dot-action-tooltip-button" />
+}
+@if ($filteredActions().length > 1) {
+    <dot-menu [icon]="$icon()" [model]="$actions()" />
 }
